--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "log-searcher",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve":"./node_modules/.bin/http-server .",
-    "scanDir":"node ./index.js"
+    "serve": "./node_modules/.bin/http-server .",
+    "scanDir": "node ./index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,8 @@
     "http-server": "^0.10.0",
     "node-dir": "^0.1.17",
     "re2": "^1.5.0",
+    "scribe-js": "^2.0.4",
+    "semver": "^5.4.1",
     "yargs": "^8.0.2"
   }
 }
